text align fix on homepage

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -14,7 +14,7 @@ strong {
 
 .home-text {
     width: 300px;
-    margin-left: 5%;
+    margin-left: 27px;
     font-family: 'Fira Mono', monospace;
 }
 
